# GNN-final-project

./: .gitignore  climate_GAN.ipynb  download_data.bat  evaluate.py  pyproject.toml  setup.bat
